--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "mongo-express": "^1.1.0-rc-3",
     "mongodb": "^6.20.0",
+    "mongodb-memory-server": "^10.3.0",
+    "mongoose": "^8.19.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
